--- a/index.html
+++ b/index.html
@@ -6,27 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="bIENVENIDOS GENTE">
     <title>TP1</title>
+    <hr>
 </head>
 <body>
     <!--cabecera-->
-  <header>
-<div>
+<header>
+ <nav>
+  <ul>
+       <li><a href="https://www.google.com.ar/">menu</a></li>
+       <li><a href="https://www.google.com.ar/">producto</a></li>
+       <li><a href="https://www.google.com.ar/">contacto</a></li>
+       <li><a href="https://www.google.com.ar/">ayuda</a></li>
+    <hr>
+  </ul>
+  </nav>
+<header>
+<section>
+ <main>
+<article> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, error odit maxime earum exercitationem dolor ullam animi, aliquam iste corrupti quam sit. Mollitia quisquam officiis praesentium modi voluptatem? Aut, similique?</p></article>
+<h1>ezio drip </h1>
+<figure>
+  <img src="/img/ezio drip.webp" alt="ezio drip">
+  <figcaption>
+    Ezio drip
+  </figcaption>
+</figure>
+ </main>
 
-<h1>proyecto web 1</h1>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae voluptatum velit ipsum, saepe alias facilis iusto praesentium facere nisi necessitatibus architecto rem, excepturi voluptate? Quia quisquam distinctio mollitia consequatur dolores!</p>
-</div>
-
- </HEADER>
-
-
-
+</section>
 
 
 <footer>
-<!--messi charla-->
+  <ol>
+<li>A</li>
+<li>B </li>
+<li>C</li>
+<li>D </li>
+</ol>
+<form>
+<input type="button" value="ase cli aca bo">
+<input type="datetime-local" name="vamo boca">
 
-<h2> probando cosas</h2>
-<p> aguante messi</p>
+</form>
+
 </footer>
     
 
