--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="bIENVENIDOS GENTE">
     <title>TP1</title>
+    <link rel="stylesheet" href="/css/design.css">
     <hr>
 </head>
 <body>
@@ -24,7 +25,9 @@
 <section>
  <main>
 <article> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, error odit maxime earum exercitationem dolor ullam animi, aliquam iste corrupti quam sit. Mollitia quisquam officiis praesentium modi voluptatem? Aut, similique?</p></article>
-<h1>ezio drip </h1>
+<hr>
+<h1>Ezio drip </h1>
+
 <figure>
   <img src="/img/ezio drip.webp" alt="ezio drip">
   <figcaption>
