--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 <header>
 <section>
  <main>
+  <div class="caja1">
 <article> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, error odit maxime earum exercitationem dolor ullam animi, aliquam iste corrupti quam sit. Mollitia quisquam officiis praesentium modi voluptatem? Aut, similique?</p></article>
+</div>
 <hr>
+<article> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, error odit maxime earum exercitationem dolor ullam animi, aliquam iste corrupti quam sit. Mollitia quisquam officiis praesentium modi voluptatem? Aut, similique?</p></article>
 <h1>Ezio drip </h1>
 
 <figure>
+  <!--ezio drip-->
   <img src="/img/ezio drip.webp" alt="ezio drip">
   <figcaption>
     Ezio drip
@@ -53,7 +57,16 @@
 </form>
 
 </footer>
-    
+  <h2> "parte 2"
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus ad, tenetur exercitationem, assumenda dolorum quibusdam deserunt vel nobis nesciunt beatae, architecto ab fuga culpa illo sint ipsum omnis ex nisi!</p>
+  </h2>
+  <ul class="ju">
+  <li>t</li>
+  <li>o</li>
+  <li>d</li>
+  <li>o</li>
+</ul>
 
 </body>
+<!-- vamo boca-->
 </html>
